# learning-modern-cpp

./: CMakeLists.txt  README.md  main.cpp
mifi-logger/: CMakeLists.txt
mifi-logger/api/: logger.h
mifi-logger/src/: logger.cpp
